--- a/public/backend/assets/css/style.css
+++ b/public/backend/assets/css/style.css
@@ -14883,7 +14883,7 @@ dl {
 
 /* Sidebar */
 .sidebar {
-  min-height: calc(100vh - 70px);
+  min-height: 100vh;
   background: -webkit-gradient(linear, left top, left bottom, from(#e6e5f2), to(#4599cd));
   background: linear-gradient(to bottom, #e6e5f2, #4599cd);
   font-family: "Rubik", sans-serif;
