--- a/public/backend/assets/css/style.css
+++ b/public/backend/assets/css/style.css
@@ -14651,6 +14651,7 @@ dl {
             font-size: 17px;
             color: #8e94a9; }
           .navbar .navbar-menu-wrapper .navbar-nav .nav-item .nav-link .nav-profile-img {
+            border: 3px solid #423a8e;
             height: 34px;
             width: 34px;
             border-radius: 50%; }
@@ -15006,10 +15007,10 @@ dl {
           width: 35px;
           height: 35px; }
           .sidebar .nav .nav-item.nav-profile .nav-link .nav-profile-image img {
+            border: 3px solid #423a8e;
             width: 35px;
             height: 35px;
-            border-radius: 100%;
-            border: solid 2px #c0bfcf; }
+            border-radius: 100%; }
         .sidebar .nav .nav-item.nav-profile .nav-link .nav-profile-text {
           margin-left: 1rem; }
           .rtl .sidebar .nav .nav-item.nav-profile .nav-link .nav-profile-text {
