--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -3433,3 +3433,13 @@ h6 {
   cursor: pointer;
 }
 
+
+.primary2-border-bold {
+  border: 2px solid #002347;
+}
+
+.primary-border-bold {
+  border: 2px solid #f8b600;
+  box-sizing: border-box;
+}
+
